service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  labels:
    app: nodejs-app
spec:
  type: ClusterIP
  selector:
    app: nodejs-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
